--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <form id="rsvp-form">
                 <div class="mb-4">
                     <label for="full-name" class="block text-sm font-semibold text-text-dark mb-1">Full Name(s)</label>
-                    <input type="text" id="full-name" name="Name" placeholder="E.g., John Doe (+1)" required class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-sun-yellow focus:border-sun-yellow">
+                    <input type="text" id="full-name" name="Name" placeholder="Name" required class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-sun-yellow focus:border-sun-yellow">
                 </div>
 
                 <div class="mb-4">
@@ -667,4 +667,5 @@
     </script>
 </body>
 </html>
+
 
